--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
   <!-- hexo-inject:begin --><!-- hexo-inject:end --><meta charset="utf-8">
   
-  <title>Morris&#39; Blog</title>
+  <title>PowerOlive&#39; Blog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Morris' Blog">
-<meta property="og:url" content="http://morris821028.github.io/index.html">
-<meta property="og:site_name" content="Morris' Blog">
+<meta property="og:title" content="PowerOlive's Blog">
+<meta property="og:url" content="http://zhenyihan.github.io/index.html">
+<meta property="og:site_name" content="PowerOlive's Blog">
 <meta property="og:description">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="Morris' Blog">
+<meta name="twitter:title" content="PowerOlive's Blog">
 <meta name="twitter:description">
 <link rel="publisher" href="108158678174364350000">
   
-    <link rel="alternative" href="/atom.xml" title="Morris&#39; Blog" type="application/atom+xml">
+    <link rel="alternative" href="/atom.xml" title="PowerOlive&#39; Blog" type="application/atom+xml">
   
   
     <meta name="google-site-verification" content="5mRgj8NanEMpGZuNfHNJNmH90RgNlrnJXsFlTaKD6Gs" />
